added routes, forms and styles and script in local

--- a/src/app/clientes/clientes.component.html
+++ b/src/app/clientes/clientes.component.html
@@ -15,10 +15,11 @@
         <tr *ngFor="let cliente of clientes">
           <td scope="row">{{cliente.nombre}}</td>
           <td>{{cliente.apellido}}</td>
-          <td>{{cliente.createdAt}}</td>
+          <td>{{cliente.createAt}}</td>
           <td>{{cliente.email}}</td>
         </tr>
       </tbody>
     </table>
   </div>
 </div>
+<app-form></app-form>
